Airflow_Installation/logs/dag_id=data_engineering_jobs_dags_v3/run_id=manual__2023-07-29T152421.790636+0000/task_id=write_to_postgres/attempt=2.log
[2023-07-29T15:32:31.200+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: data_engineering_jobs_dags_v3.write_to_postgres manual__2023-07-29T15:24:21.790636+00:00 [queued]>
[2023-07-29T15:32:31.554+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: data_engineering_jobs_dags_v3.write_to_postgres manual__2023-07-29T15:24:21.790636+00:00 [queued]>
[2023-07-29T15:32:31.574+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2023-07-29T15:32:31.585+0000] {taskinstance.py:1284} INFO - Starting attempt 2 of 2
[2023-07-29T15:32:31.587+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2023-07-29T15:32:32.392+0000] {taskinstance.py:1304} INFO - Executing <Task(PythonOperator): write_to_postgres> on 2023-07-29 15:24:21.790636+00:00
[2023-07-29T15:32:32.441+0000] {standard_task_runner.py:55} INFO - Started process 13914 to run task
[2023-07-29T15:32:32.591+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'data_engineering_jobs_dags_v3', 'write_to_postgres', 'manual__2023-07-29T15:24:21.790636+00:00', '--job-id', '2845', '--raw', '--subdir', 'DAGS_FOLDER/load_data_v3.py', '--cfg-path', '/tmp/tmp__edk571']
[2023-07-29T15:32:32.631+0000] {standard_task_runner.py:83} INFO - Job 2845: Subtask write_to_postgres
[2023-07-29T15:32:34.057+0000] {task_command.py:389} INFO - Running <TaskInstance: data_engineering_jobs_dags_v3.write_to_postgres manual__2023-07-29T15:24:21.790636+00:00 [running]> on host f1ea17bde741
[2023-07-29T15:32:37.640+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=data_engineering_jobs_dags_v3
AIRFLOW_CTX_TASK_ID=write_to_postgres
AIRFLOW_CTX_EXECUTION_DATE=2023-07-29T15:24:21.790636+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-07-29T15:24:21.790636+00:00
[2023-07-29T15:32:38.910+0000] {base.py:73} INFO - Using connection ID 'my_connection' for task execution.
[2023-07-29T15:32:39.409+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 192, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/load_data_v3.py", line 74, in write_to_postgres
    execute_values(cursor, insert_statement, [tuple(x) for x in df.to_records(index=False)])
  File "/home/airflow/.local/lib/python3.7/site-packages/psycopg2/extras.py", line 1299, in execute_values
    cur.execute(b''.join(parts))
psycopg2.errors.SyntaxError: syntax error at or near "Title"
LINE 1: ...in,salary_max,description,label,tag,longitude,Job Title,id,s...
                                                             ^

[2023-07-29T15:32:39.739+0000] {taskinstance.py:1327} INFO - Marking task as FAILED. dag_id=data_engineering_jobs_dags_v3, task_id=write_to_postgres, execution_date=20230729T152421, start_date=20230729T153231, end_date=20230729T153239
[2023-07-29T15:32:40.451+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 2845 for task write_to_postgres (syntax error at or near "Title"
LINE 1: ...in,salary_max,description,label,tag,longitude,Job Title,id,s...
                                                             ^
; 13914)
[2023-07-29T15:32:40.529+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2023-07-29T15:32:41.323+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
